updates, before refactoring model loading
